# SmartInventoryManagement

./: ARCHITECTURE.md  INTEGRATION_SUMMARY.md  MONGODB_SETUP.md  QUICK_REFERENCE.md  README.md  README_SETUP.md  app.py  app_integrated.py  arima.py  auth.js  dashboard.html  import_data.py  lstm.py  modelforecase.ipynb  mongod.py  prophet_train.py  pyproject.toml  readme.md  requirements.txt  setup.bat  train_models.py
api/: app.py
models/: arima_model.pkl  prophet_model.pkl
static/: dashboard.js  login.js  styles.css
static/js/: dashboard.js  script.js  signup.js
static/js/modules/: api.js  auth.js  ui.js
templates/: alert.html  dashboard.html  forecast.html  index.html  inventory.html  login.html  main.html  report.html  signup.html  user.html
